fix: overflow add scrollable

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
   background: #412c2f;
   height: 100vh;
   margin: 0;
+  overflow: auto;
 }
 
 h2 {
